syntax = "proto3";

package access;

option go_package = "github.com/mikekbnv/grpc-react-web/proto;access";


service Access {
    rpc AccessCheck(EntranceRequest) returns(Response) {};
    rpc ExitCheck(ExitRequest) returns(Response) {};
    rpc AddEmployee(EmployeeRequest) returns(EmployeeResponse) {};
    rpc DeleteEmployee(DeleteEmployeeRequest) returns(EmptyResponse) {};   
    rpc ListEmployees(EmptyRequest) returns(ListEmployeesResponse) {};
 }

message EntranceRequest {
    int32 id = 1;
    string file_name = 2;
    bytes  chunk = 3;
}
message ExitRequest {
    int32 id = 1;
}
message Response {
    bool access = 1;
}
message Employee {
    int32 id = 1;
    string fname = 2;
    string lname = 3;
    string position = 4;
    bytes photo = 5;
}
message EmployeeRequest {
    Employee employee = 1;
}
message EmployeeResponse {
   int32 id = 1;
}
message ListEmployeesResponse {
    repeated Employee employees = 1;
}
message DeleteEmployeeRequest {
    int32 id = 1;
}
message EmptyResponse {

}
message EmptyRequest {

}
